<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>zerodowntime</groupId>
  <artifactId>minitwit-java</artifactId>
  <version>0.0.1</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <javalin.version>7.0.1</javalin.version>
    <openapi.version>7.0.1</openapi.version>
  </properties>

  <dependencies>
    <!-- Javalin web framework -->
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin</artifactId>
      <version>${javalin.version}</version>
    </dependency>

    <dependency>
      <groupId>io.javalin.community.openapi</groupId>
      <artifactId>javalin-openapi-plugin</artifactId>
      <version>${openapi.version}</version>
    </dependency>
    <dependency>
      <groupId>io.javalin.community.openapi</groupId>
      <artifactId>javalin-swagger-plugin</artifactId>
      <version>${openapi.version}</version>
    </dependency>

    <!-- Logging (required by Javalin) -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.12</version>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.2</version>
    </dependency>

    <!-- Database dependencies -->
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>5.1.0</version>
    </dependency>

    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq</artifactId>
      <version>3.20.11</version>
    </dependency>

    <!-- Bcrypt for password hashing -->
    <dependency>
      <groupId>org.mindrot</groupId>
      <artifactId>jbcrypt</artifactId>
      <version>0.4</version>
    </dependency>

    <!-- Testing dependencies -->
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin-testtools</artifactId>
      <version>6.7.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.25.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.12.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20231013</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.2.224</version>
      <scope>test</scope>
    </dependency>


    <!-- IO Prometheus -->
    <dependency>
      <groupId>io.prometheus</groupId>
      <artifactId>simpleclient</artifactId>
      <version>0.16.0</version>
    </dependency>
    <dependency>
      <groupId>io.prometheus</groupId>
      <artifactId>simpleclient_common</artifactId>
      <version>0.16.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>io.javalin.community.openapi</groupId>
              <artifactId>openapi-annotation-processor</artifactId>
              <version>${openapi.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>zerodowntime.App</mainClass>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
          <groupId>org.jooq</groupId>
          <artifactId>jooq-codegen-maven</artifactId>
          <version>3.19.0</version>

          <configuration>
              <jdbc>
                  <driver>org.postgresql.Driver</driver>
                  <url>jdbc:postgresql://localhost:5432/minitwit</url>
                  <user>minitwit_admin</user>
                  <password>dev_password</password>
              </jdbc>
              <generator>
                  <database>
                    <name>org.jooq.meta.postgres.PostgresDatabase</name>
                    <includes>.*</includes> <inputSchema>public</inputSchema>
                  </database>
                  <target>
                    <packageName>zerodowntime.generated.jooq</packageName>
                    <directory>src/main/java</directory>
                  </target>
                  <strategy>
                      <matchers>
                          <tables>
                              <table>
                                  <expression>^(.*)S$</expression> 
                                  <recordClass>
                                      <expression>$1_RECORD</expression>
                                      <transform>PASCAL</transform>
                                  </recordClass>
                              </table>
                          </tables>
                      </matchers>
                  </strategy>
              </generator>
          </configuration>
      </plugin>
    </plugins>
  </build>
</project>